--- a/index.couvert.html
+++ b/index.couvert.html
@@ -198,7 +198,13 @@ const ABC_URL   = "https://script.google.com/macros/s/AKfycbxu0HjXsbvXr9OGYDAEfN
 
 /*** CONFIG – produtos que entram/saem da Arrecadação ***/
 const PRODUTOS_ARRECADACAO = [
-  "couvert"           // adicione aqui outros termos: "couvert artistico", "entrada couvert", etc.
+"COUVERT ARTISTICO",
+"COUVERT ARTISTICO",
+"COUVERT ARTISTICO",
+"COUVERT ARTISTICO SEXTA",
+"COUVERT QUINTA",
+"ENTRADA COUVERT JOGO R$100,00"
+           // adicione aqui outros termos: "couvert artistico", "entrada couvert", etc.
 ];
 const PRODUTOS_EXCLUIR = [
   "couvert do villa",
