--- a/index.couvert.html
+++ b/index.couvert.html
@@ -197,14 +197,7 @@ const SHEET_API = "https://script.google.com/macros/s/AKfycbxWaj8E9HFvxJLojit8u8
 const ABC_URL   = "https://script.google.com/macros/s/AKfycbyxXGWhIvgWwwluTqpoG08kh9CA1uXut-vdlaPmqIK7JQiLnkIgRZKjtvynKXXJ_jNlXg/exec";
 
 /*** CONFIG – produtos que entram/saem da Arrecadação ***/
-const PRODUTOS_ARRECADACAO = [
-"COUVERT ARTISTICO",
-"COUVERT ARTISTICO",
-"COUVERT ARTISTICO",
-"COUVERT ARTISTICO SEXTA",
-"COUVERT QUINTA",
-"ENTRADA COUVERT JOGO R$100,00"
-           // adicione aqui outros termos: "couvert artistico", "entrada couvert", etc.
+const PRODUTOS_ARRECADACAO = [ "COUVERT ARTISTICO", "COUVERT ARTISTICO SEXTA", "COUVERT QUINTA", "ENTRADA COUVERT JOGO R$100,00"
 ];
 const PRODUTOS_EXCLUIR = [
   "couvert delicia"
