--- a/index.couvert.html
+++ b/index.couvert.html
@@ -194,7 +194,7 @@
 <script>
 /*** URLs ***/
 const SHEET_API = "https://script.google.com/macros/s/AKfycbxWaj8E9HFvxJLojit8u8dvTopG0RLTtbBXQdmD6U93dgBSiupHyu79idCkeFD0a4FZ6w/exec";
-/* Web App que devolve [{empresa, data, total_dia}] */
+/* Web App que devolve [{empresa, data, total_dia}] (coluna G) */
 const ABC_URL   = "https://script.google.com/macros/s/AKfycbxKwTupEJfyDXkDndk0fszUpozcaGsiWpeq3daO2OCYiAEzfO4mBVaBqZzTQSzC4-Om/exec";
 
 /*** STATE ***/
@@ -231,7 +231,7 @@ function cleanNumber(v){
   const s=String(v).replace(/[R$\s]/g,"").replace(/\./g,"").replace(",",".");
   return parseFloat(s)||0;
 }
-/* aceita yyyy-mm-dd | Date | dd/mm/yyyy */
+/* yyyy-mm-dd | Date | dd/mm/yyyy -> yyyy-mm-dd */
 function toISODate(s){
   if(!s) return "";
   if (s instanceof Date && !isNaN(s)) {
@@ -289,11 +289,15 @@ async function fetchPagamentos(){
   }));
 }
 
-async function fetchABC(){
-  const r=await fetch(ABC_URL);
+/* Tenta filtrar no servidor com ?ini=...&fim=..., mas funciona também sem aceitar query */
+async function fetchABC(ini, fim){
+  const qs = (ini && fim) ? `?ini=${toISODate(ini)}&fim=${toISODate(fim)}` : "";
+  let r = await fetch(ABC_URL + qs);
+  if(!r.ok && qs){ r = await fetch(ABC_URL); }
   if(!r.ok) throw new Error("ABC HTTP "+r.status);
-  const arr=await r.json(); // [{empresa,data,total_dia}]
 
+  const raw = await r.json();
+  const arr = Array.isArray(raw) ? raw : (raw.registros || raw.data || raw.items || []);
   abcAll = arr
     .map(o=>{
       const emp = remapEmpresaABCfromObj(o);
@@ -398,7 +402,7 @@ function aplicar(){
   const allSelected = (empresasSelecionadas.size===empresas.length);
   const filtroEmp = (empresa)=> allSelected || empresasSelecionadas.has(empresa);
 
-  // PAGAMENTOS (já respeitava os filtros de empresa + período de Pagamentos)
+  // PAGAMENTOS
   const pagos = pagamentosAll.filter(p=>{
     const okEmp = filtroEmp(p.empresa);
     const d = p.data_pagamento ? parseISO(p.data_pagamento) : null;
@@ -419,7 +423,7 @@ function aplicar(){
   });
 
   // Agrupa por data (yyyy-mm-dd) e soma o total_dia
-  const dias = new Map(); // key: 'yyyy-mm-dd' -> valor somado do dia
+  const dias = new Map();
   for(const x of arrsFiltrados){
     const key = String(x.data).slice(0,10);
     dias.set(key, (dias.get(key) || 0) + cleanNumber(x.faturamento));
@@ -431,7 +435,7 @@ function aplicar(){
   const somaApagar = abertos.reduce((s,p)=>s+cleanNumber(p.valor),0);
   const somaTotal  = somaPago + somaApagar;
 
-  // Resultado (Arrecadação filtrada – Pagamentos filtrados)
+  // Resultado
   const resultado  = totalArr - somaTotal;
 
   // KPIs
@@ -472,7 +476,7 @@ function aplicar(){
     tb.appendChild(tr);
   });
 
-  // Resumo por empresa (já respeita período do ABC)
+  // Resumo por empresa
   const rb=$("#tblResumoEmp tbody"); rb.innerHTML="";
   empresas.forEach(emp=>{
     const pPago = pagamentosAll.filter(p=>{
@@ -484,10 +488,8 @@ function aplicar(){
       return p.empresa===emp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
     });
 
-    // Arrecadação por empresa dentro do período (somada por dia implicitamente)
     const aEmp = arrsFiltrados.filter(x=> (x.empresa? x.empresa===emp : true));
     const tA = aEmp.reduce((s,x)=>s+cleanNumber(x.faturamento),0);
-
     const tP = pPago.reduce((s,p)=>s+cleanNumber(p.valor),0) + pAber.reduce((s,p)=>s+cleanNumber(p.valor),0);
     const tR = tA - tP;
 
@@ -596,8 +598,26 @@ function placePopover(pop, anchor){
   const prState={cursor:new Date(pIni.getFullYear(),pIni.getMonth(),1), start:pIni, end:pFim, anchor:$("#btnPR")};
   const arState={cursor:new Date(aIni.getFullYear(),aIni.getMonth(),1), start:aIni, end:aFim, anchor:$("#btnAR")};
 
-  const openPR = ()=>{ prState.anchor=$("#btnPR"); prPop.innerHTML=""; buildRangeCalendar(prPop, prState, (start,end)=>{ pIni=new Date(start); pFim=new Date(end); $("#lblPR").textContent=fmtRange(pIni,pFim); prPop.style.display="none"; aplicar(); }, ()=> prPop.style.display="none"); placePopover(prPop, $("#btnPR")); };
-  const openAR = ()=>{ arState.anchor=$("#btnAR"); arPop.innerHTML=""; buildRangeCalendar(arPop, arState, (start,end)=>{ aIni=new Date(start); aFim=new Date(end); $("#lblAR").textContent=fmtRange(aIni,aFim); renderChips(); aplicar(); arPop.style.display="none"; }, ()=> arPop.style.display="none"); placePopover(arPop, $("#btnAR")); };
+  const openPR = ()=>{ prState.anchor=$("#btnPR"); prPop.innerHTML="";
+    buildRangeCalendar(prPop, prState, (start,end)=>{
+      pIni=new Date(start); pFim=new Date(end);
+      $("#lblPR").textContent=fmtRange(pIni,pFim);
+      prPop.style.display="none"; aplicar();
+    }, ()=> prPop.style.display="none");
+    placePopover(prPop, $("#btnPR"));
+  };
+
+  const openAR = ()=>{ arState.anchor=$("#btnAR"); arPop.innerHTML="";
+    buildRangeCalendar(arPop, arState, async (start,end)=>{
+      aIni=new Date(start); aFim=new Date(end);
+      $("#lblAR").textContent=fmtRange(aIni,aFim);
+      // tenta buscar já filtrado no servidor (fallback para cliente)
+      try { await fetchABC(aIni,aFim); } catch(e){ console.warn(e); }
+      coletarEmpresas(); renderChips(); aplicar();
+      arPop.style.display="none";
+    }, ()=> arPop.style.display="none");
+    placePopover(arPop, $("#btnAR"));
+  };
 
   $("#btnPR").onclick=openPR;
   $("#btnAR").onclick=openAR;
@@ -606,21 +626,12 @@ function placePopover(pop, anchor){
 
   try{
     await fetchPagamentos();
+    await fetchABC(aIni,aFim);      // já busca o ABC do período atual
     coletarEmpresas(); renderChips(); aplicar();
     $("#loading").style.display="none";
-    $("#empLoadMsg").style.display="block";
-
-    try{
-      await fetchABC();
-      coletarEmpresas(); renderChips(); aplicar();
-      $("#empLoadMsg").style.display="none";
-    }catch(e){
-      console.error(e);
-      $("#abcStatus").textContent="Não foi possível carregar o ABC agora.";
-    }
   }catch(e){
     console.error(e);
-    alert("Erro ao carregar pagamentos: "+e.message);
+    alert("Erro ao carregar dados: "+e.message);
     $("#loading").style.display="none";
   }
 })();
