--- a/index.couvert.html
+++ b/index.couvert.html
@@ -222,7 +222,8 @@ let aIni=null,aFim=null; // ABC
 /*** HELPERS ***/
 const $ = s=>document.querySelector(s);
 function brl(v){return Number(v||0).toLocaleString('pt-BR',{style:'currency',currency:'BRL'});}
-function parseISO(d){return new Date(d+"T00:00:00");}
+function pad2(n){return String(n).padStart(2,'0');}
+function parseISO(d){return new Date(d+"T00:00:00");}      // sempre meia-noite LOCAL
 function inRange(d,a,b){return (!a||d>=a) && (!b||d<=b);}
 function uniq(a){return [...new Set(a)].filter(Boolean).sort();}
 function cleanNumber(v){
@@ -231,21 +232,24 @@ function cleanNumber(v){
   const s=String(v).replace(/[R$\s]/g,"").replace(/\./g,"").replace(",",".");
   return parseFloat(s)||0;
 }
-/* yyyy-mm-dd | Date | dd/mm/yyyy -> yyyy-mm-dd */
+/* yyyy-mm-dd | Date | dd/mm/yyyy -> "yyyy-mm-dd" gerado manualmente (sem toISOString/UTC) */
 function toISODate(s){
   if(!s) return "";
+  let dt = null;
   if (s instanceof Date && !isNaN(s)) {
-    return new Date(s.getFullYear(), s.getMonth(), s.getDate()).toISOString().slice(0,10);
+    dt = new Date(s.getFullYear(), s.getMonth(), s.getDate());
+  } else {
+    const str = String(s).trim();
+    if (/^\d{2}\/\d{2}\/\d{4}$/.test(str)){
+      const [d,m,y] = str.split("/").map(Number);
+      dt = new Date(y, m-1, d);
+    } else {
+      const d = new Date(str);
+      if (!isNaN(d)) dt = new Date(d.getFullYear(), d.getMonth(), d.getDate());
+    }
   }
-  const str = String(s).trim();
-  if (/^\d{2}\/\d{2}\/\d{4}$/.test(str)){
-    const [d,m,y] = str.split("/").map(Number);
-    const dt = new Date(y, m-1, d);
-    return isNaN(dt)? "" : dt.toISOString().slice(0,10);
-  }
-  const d = new Date(str);
-  if (!isNaN(d)) return new Date(d.getFullYear(), d.getMonth(), d.getDate()).toISOString().slice(0,10);
-  return "";
+  if (!dt || isNaN(dt)) return "";
+  return `${dt.getFullYear()}-${pad2(dt.getMonth()+1)}-${pad2(dt.getDate())}`;
 }
 function isoFromStr(s){ return toISODate(s); }
 function fmtRange(a,b){
@@ -307,7 +311,7 @@ async function fetchABC(ini, fim){
     })
     .filter(x=>{
       if(!x.data) return false;
-      const d = new Date(x.data);
+      const d = parseISO(x.data);            // <<< meia-noite local
       return d.getFullYear() === ANO;
     });
 
@@ -324,7 +328,7 @@ function coletarEmpresas(){
 function sumArrecadacaoEmpresa(emp){
   return abcAll
     .filter(x=>{
-      const d=new Date(x.data);
+      const d = parseISO(x.data);            // <<< corrigido (sem UTC)
       return x.empresa===emp && inRange(d,aIni,aFim);
     })
     .reduce((s,x)=>s+cleanNumber(x.faturamento),0);
@@ -411,13 +415,13 @@ function aplicar(){
 
   const abertos = pagamentosAll.filter(p=>{
     const okEmp = filtroEmp(p.empresa);
-    const d = !p.data_pagamento && p.vencimento ? new Date(p.vencimento) : null;
+    const d = !p.data_pagamento && p.vencimento ? parseISO(p.vencimento) : null;
     return okEmp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
   });
 
   // ABC (total por DIA dentro do período + empresas filtradas)
   const arrsFiltrados = abcAll.filter(x=>{
-    const d = new Date(x.data);
+    const d = parseISO(x.data);   // <<< corrigido (sem UTC)
     const okEmp = x.empresa ? filtroEmp(x.empresa) : true;
     return okEmp && inRange(d,aIni,aFim);
   });
@@ -451,7 +455,7 @@ function aplicar(){
   const tbA=$("#tblApagar tbody"); tbA.innerHTML="";
   $("#qtApagar").textContent = abertos.length;
   $("#msgApagar").style.display = abertos.length? "none":"block";
-  abertos.sort((x,y)=> new Date(x.vencimento) - new Date(y.vencimento))
+  abertos.sort((x,y)=> parseISO(x.vencimento) - parseISO(y.vencimento))
     .forEach(p=>{
       const tr=document.createElement("tr");
       tr.innerHTML = `
@@ -484,7 +488,7 @@ function aplicar(){
       return p.empresa===emp && d && inRange(d,pIni,pFim);
     });
     const pAber = pagamentosAll.filter(p=>{
-      const d = !p.data_pagamento && p.vencimento ? new Date(p.vencimento) : null;
+      const d = !p.data_pagamento && p.vencimento ? parseISO(p.vencimento) : null;
       return p.empresa===emp && d && inRange(d,pIni,pFim) && !p.data_pagamento;
     });
 
@@ -611,7 +615,6 @@ function placePopover(pop, anchor){
     buildRangeCalendar(arPop, arState, async (start,end)=>{
       aIni=new Date(start); aFim=new Date(end);
       $("#lblAR").textContent=fmtRange(aIni,aFim);
-      // tenta buscar já filtrado no servidor (fallback para cliente)
       try { await fetchABC(aIni,aFim); } catch(e){ console.warn(e); }
       coletarEmpresas(); renderChips(); aplicar();
       arPop.style.display="none";
@@ -626,7 +629,7 @@ function placePopover(pop, anchor){
 
   try{
     await fetchPagamentos();
-    await fetchABC(aIni,aFim);      // já busca o ABC do período atual
+    await fetchABC(aIni,aFim);
     coletarEmpresas(); renderChips(); aplicar();
     $("#loading").style.display="none";
   }catch(e){
