--- a/index.couvert.html
+++ b/index.couvert.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"/>
-<title>Painel • Couvert Mercatto 2025</title>
+<title>Vendas de couvert</title>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
 <style>
   :root{
@@ -99,7 +99,7 @@
 </style>
 </head>
 <body>
-<header><h1>Painel de Arrecadação x Pagamentos</h1></header>
+<header><h1>Painel de couvert</h1></header>
 
 <div id="loading">⏳ Carregando dados…</div>
 
